Bug fix: broken ui on progress list after text decoration change

--- a/web/src/style/components/progress-list.css
+++ b/web/src/style/components/progress-list.css
@@ -20,11 +20,9 @@
       display: flex;
       align-items: center;
       margin-bottom: var(--spacing-8);
-      & a {
-        &:before {
-          content: '- ';
-          margin-right: var(--spacing-8);
-        }
+      &:before {
+        content: '- ';
+        margin-right: var(--spacing-8);
       }
     }
 
